--- a/lesson_14/css/style.css
+++ b/lesson_14/css/style.css
@@ -36,6 +36,9 @@ body {
 	display: flex;
 	justify-content: space-between;
 }
+.header-logo {
+	flex: 1 0 150px;
+}
 .header-logo__link {
 	letter-spacing: 0.06em;
 	cursor: pointer;
@@ -56,7 +59,12 @@ body {
 	color: rgba(201, 201, 201, 0.6);
 	transition: all 0.3s;
 }
-
+.line {
+	background: #f2c94c;
+	max-width: 474px;
+	width: 100%;
+	height: 9px;
+}
 /*? Style main block */
 .caravana {
 	background: url('../img/background.jpg');
@@ -122,22 +130,18 @@ body {
 	flex-direction: column;
 	align-items: flex-start;
 }
-.block-content__wrapper::before {
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 9px;
-	top: 66px;
-	background: #f2c94c;
-}
+
 .block-content__title {
 	font-family: 'Quattrocento';
 	font-weight: 400;
 	font-size: 60px;
 	line-height: 1.3;
-	margin-bottom: 48px;
 }
-
+.block-content__line {
+	margin-bottom: 48px;
+	min-width: 427px;
+	max-width: 100%;
+}
 .block-content__text {
 	flex-grow: 1;
 	font-size: 25px;
@@ -158,30 +162,37 @@ body {
 	border: 2px solid rgba(255, 191, 0, 0.7);
 	transition: all 0.3s;
 }
-
 .block-content__image {
+	flex: 1 0 513px;
+	border-radius: 5px;
+	overflow: hidden;
+}
+.block-content__image img {
 	max-width: 100%;
+	min-height: 100%;
+	-o-object-fit: cover;
+	object-fit: cover;
 }
 
 /* ? Style Find US */
 .find-us {
 	padding: 60px 0 230px 0;
 }
+.find-us__wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
 .find-us__name {
 	font-family: 'Quattrocento';
 	font-size: 60px;
-	position: relative;
-	display: flex;
-	justify-content: center;
 	margin-bottom: 125px;
+	text-align: center;
 }
-.find-us__name::before {
-	content: '';
-	position: absolute;
-	width: 474px;
-	height: 9px;
-	top: 75px;
-	background: #f2c94c;
+.find-us__line {
+	margin-bottom: 40px;
+	min-width: 427px;
+	max-width: 100%;
 }
 .find-us-block {
 	display: flex;
@@ -226,16 +237,12 @@ body {
 .block-our-menu__title {
 	font-family: 'Quattrocento';
 	font-size: 60px;
-	position: relative;
-	margin-bottom: 40px;
+	text-align: center;
 }
-.block-our-menu__title::before {
-	content: '';
-	position: absolute;
-	width: 474px;
-	height: 9px;
-	transform: translate(-18%, 70px);
-	background: #f2c94c;
+.block-our-menu__line {
+	margin-bottom: 40px;
+	min-width: 427px;
+	max-width: 100%;
 }
 .block-our-menu__text {
 	font-size: 25px;
@@ -282,7 +289,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 0 0 250px 0;
+	padding: 0px 0 250px 0;
 }
 .footer__image img {
 	max-width: 100%;
@@ -307,8 +314,9 @@ body {
 }
 .icons {
 	display: flex;
-	align-content: center;
-	gap: 50px;
+	justify-content: flex-start;
+	flex-wrap: wrap;
+	gap: 30px;
 }
 .icons img:hover {
 	transform: scale(1.2);
