--- a/lesson_15/css/style.css
+++ b/lesson_15/css/style.css
@@ -327,6 +327,9 @@ body {
 	letter-spacing: 0.5px;
 	padding: 13.25px 40px;
 }
+.about-us__button:not(:last-child) {
+	margin-bottom: 30px;
+}
 .decor-about-us {
 	position: absolute;
 	width: 100%;
