--- a/lesson_17/css/style.css
+++ b/lesson_17/css/style.css
@@ -6,6 +6,9 @@ body {
 	line-height: 1.5;
 	color: #424551;
 }
+body._lock {
+	overflow: hidden;
+}
 .wrapper {
 	overflow: hidden;
 	min-height: 100%;
@@ -39,10 +42,15 @@ body {
 	align-items: center;
 	gap: 60px;
 }
-.header-block-menu {
+.menu__icon {
+	display: none;
+}
+.header-block__menu {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 	flex-grow: 1;
 }
-
 .menu__list {
 	display: flex;
 	column-gap: 40px;
@@ -74,13 +82,6 @@ body {
 }
 .menu__link:hover {
 	color: #ff3f3a;
-}
-.header-block__actions {
-	display: flex;
-	align-items: center;
-	flex-wrap: wrap;
-	column-gap: 36px;
-	row-gap: 20px;
 }
 
 .header-block-actions {
@@ -434,6 +435,7 @@ body {
 	overflow: hidden;
 	position: relative;
 	padding-right: 35.788%;
+	flex: 0 0 35.788%;
 }
 .card-cource__image img {
 	position: absolute;
@@ -455,7 +457,8 @@ body {
 	align-items: flex-start;
 	gap: 20px;
 	padding: 32px;
-	flex-grow: 1;
+	flex: 1 1 auto;
+	/* flex-grow: 1; */
 }
 .card-cource__subtitle {
 	font-size: 14px;
