--- a/jaguar/css/fonts.css
+++ b/jaguar/css/fonts.css
@@ -1,6 +1,6 @@
 /* ! Font Open Sans 400, 600, 700, 800 */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap");
 /* ! Font "SF Pro"  860*/
 @font-face {
    font-family: "SF Pro";
