--- a/jaguar/css/style.css
+++ b/jaguar/css/style.css
@@ -3,6 +3,7 @@ body {
    line-height: 1.5;
    color: #171832;
    background: #f8f8f8;
+   font-style: normal;
 }
 body._lock {
    overflow: hidden;
@@ -27,8 +28,9 @@ body._lock {
 }
 /* ! Header */
 .header {
-   background: linear-gradient(180deg, rgba(228, 227, 227, 0.9) 0%, rgba(224, 235, 255, 0.7) 100%),
-      rgba(52, 168, 83, 0.05);
+   /* background: linear-gradient(180deg, rgba(228, 227, 227, 0.8) 0%, rgba(224, 235, 255, 0.7) 100%),
+      rgba(52, 168, 83, 0.05); */
+   background: #ffffff;
    position: fixed;
    top: 0;
    left: 0;
@@ -256,6 +258,7 @@ body._lock {
    background: #ffffff;
    border: 1px solid #2e8b57;
    border-radius: 10px;
+   transition: all 0.3s ease 0s;
 }
 .benefits__icon {
    display: flex;
@@ -316,6 +319,9 @@ body._lock {
 .slider {
    position: relative;
 }
+.slider__block {
+   margin-bottom: 100px;
+}
 .swiper-slide {
    overflow: hidden;
    border-radius: 5px;
@@ -356,4 +362,234 @@ body._lock {
 .slider-button--next:active {
    background: #ffffff url("../img/what-like/icons/right.svg") 50% 50% no-repeat;
    box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.03);
+}
+
+/* !Job description */
+.description-job {
+   padding: 50px 0;
+}
+
+.description-job__subtitle {
+   margin-bottom: 60px;
+}
+
+.description-job__name {
+   text-align: center;
+   text-transform: uppercase;
+   font-weight: 800;
+   font-size: 36px;
+   line-height: 1.3;
+   color: #2e8b57;
+   margin-bottom: 40px;
+}
+.job {
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   column-gap: 30px;
+   row-gap: 60px;
+   /* align-items: center; */
+}
+.job__item:nth-child(3n + 3) {
+   order: 1;
+}
+.job__description {
+   margin-bottom: 60px;
+}
+.job__subtitle {
+   font-weight: 700;
+   font-size: 24px;
+   line-height: 1.3;
+   color: #000000;
+   padding-left: 55px;
+   margin-bottom: 30px;
+}
+.job__subtitle--icon-1 {
+   position: relative;
+}
+.job__subtitle span {
+   color: #2e8b57;
+}
+.job__subtitle--icon-1::before {
+   content: "";
+   position: absolute;
+   top: -13px;
+   left: 0;
+   width: 40px;
+   height: 42px;
+   background: url("../img/job/icons/payment.svg") 0 0 no-repeat;
+}
+.job__list {
+   font-weight: 600;
+   /* font-weight: 500; */
+   line-height: 1.3;
+   color: #818181;
+}
+.job__list:not(:last-child) {
+   margin-bottom: 12px;
+}
+.list-job li {
+   padding-left: 20px;
+}
+.list-job__item:not(:last-child) {
+   margin-bottom: 15px;
+}
+.list-job__item {
+   position: relative;
+}
+.list-job__item::before {
+   position: absolute;
+   content: "";
+   top: 5px;
+   left: 0;
+   width: 10px;
+   height: 10px;
+   border-radius: 50%;
+   background: #2e8b57;
+}
+.job__warning {
+   font-weight: 600;
+   line-height: 1.4;
+   color: #acacac;
+}
+.job__image {
+   border-radius: 10px;
+   overflow: hidden;
+   object-fit: cover;
+}
+.job__image img {
+   max-width: 100%;
+   width: 100%;
+   max-height: 400px;
+   /* min-height: 400px; */
+   object-fit: cover;
+}
+.job__subtitle--icon-2 {
+   position: relative;
+}
+.job__subtitle--icon-2::before {
+   content: "";
+   position: absolute;
+   top: -13px;
+   left: 0;
+   width: 40px;
+   height: 50px;
+   background: url("../img/job/icons/list.svg") 0 0 no-repeat;
+}
+
+/* !Map */
+.map {
+   background: url("../img/map/map.png");
+   background-position: center top;
+   background-repeat: no-repeat;
+   background-size: cover;
+   height: 600px;
+   position: relative;
+}
+.map__background {
+   position: absolute;
+   z-index: 2;
+   width: 100%;
+   height: 100%;
+   background: linear-gradient(0deg, rgba(0, 0, 0, 0.99), rgba(0, 0, 0, 0.5));
+}
+
+.map__body {
+   /* position: absolute; */
+   position: relative;
+   padding-top: 190px;
+   display: flex;
+   flex-direction: column;
+   align-items: flex-start;
+   top: 0;
+   left: 0%;
+   z-index: 5;
+}
+.map__title {
+   font-family: "SF Pro";
+   font-style: normal;
+   font-weight: 860;
+   font-size: 60px;
+   line-height: 1.4;
+   color: #ffffff;
+   /* text-align: center; */
+   position: relative;
+   padding-left: 150px;
+}
+.map__title::before {
+   content: "";
+   position: absolute;
+   width: 96px;
+   height: 122.62px;
+   top: 0;
+   left: 0;
+   background: url("../img/map/icons/location.svg") 0 0 no-repeat;
+   background-size: cover;
+}
+.map__subtitle {
+   font-family: "SF Pro";
+   font-style: normal;
+   font-weight: 860;
+   font-size: 60px;
+   line-height: 1.4;
+   color: #00f562;
+   text-align: center;
+   padding-left: 150px;
+   margin-bottom: 40px;
+}
+.map__text {
+   font-size: 25px;
+   line-height: 1.5;
+   color: #ffffff;
+   max-width: 800px;
+   padding-left: 150px;
+}
+
+/* ! Vacainces */
+
+.vacancies {
+   padding: 60px 0 50px 0;
+}
+.vacancies__subtitle {
+   margin-bottom: 45px;
+}
+.grid-vacancies {
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr;
+   grid-gap: 30px;
+}
+.grid-vacancies__item {
+   display: flex;
+   align-items: center;
+   gap: 15px;
+   padding: 20px;
+   background: linear-gradient(90.42deg, rgba(46, 139, 87, 0.1) -0.72%, rgba(28, 184, 97, 0.1) 98.07%);
+   border-radius: 20px;
+   transition: all 0.3s ease 0s;
+   /* cursor: pointer; */
+}
+
+.grid-vacancies__title {
+   font-weight: 600;
+}
+.grid-vacancies__line {
+   width: 1px;
+   height: 40px;
+   background: #2e8b57;
+}
+
+/* ! Footer */
+.footer {
+   padding: 30px 0;
+   background: linear-gradient(180deg, rgba(228, 227, 227, 0.1) 0%, rgba(224, 235, 255, 0.2) 100%),
+      rgba(52, 168, 83, 0.05);
+}
+.footer__container {
+   display: flex;
+   justify-content: space-between;
+   gap: 20px;
+   align-items: center;
+}
+.footer__image img {
+   width: 165px;
+   height: 37px;
 }
