--- a/jaguar/css/adaptive.css
+++ b/jaguar/css/adaptive.css
@@ -88,7 +88,7 @@
       height: 100%;
       background-color: rgb(255, 255, 255);
       padding: 60px 15px 30px 15px;
-      transition: all 0.6s cubic-bezier(0.58, -0.21, 0.74, 0.05) 0s;
+      transition: left 0.6s cubic-bezier(0.58, -0.21, 0.74, 0.05) 0s;
       overflow: auto;
    }
    .menu__list {
