--- a/jaguar/css/components.css
+++ b/jaguar/css/components.css
@@ -1,38 +1,41 @@
 .button {
-   display: inline-block;
-   padding: 20px 30px;
-   background: #2e8b57;
-   border-radius: 5px;
-   font-weight: 600;
-   font-size: 18px;
-   line-height: 1.1112;
-   color: #ffffff;
-   transition: all 0.3s ease 0s;
-   letter-spacing: 0.02em;
-   flex-shrink: 0;
+	display: inline-block;
+	padding: 20px 30px;
+	background: #2e8b57;
+	border-radius: 5px;
+	font-weight: 600;
+	font-size: 18px;
+	line-height: 1.1112;
+	color: #ffffff;
+	transition: all 0.3s ease 0s;
+	letter-spacing: 0.02em;
+	flex-shrink: 0;
 }
-.button:hover {
-   background: rgba(225, 255, 238, 0.3);
-   /* background: transparent; */
-   outline: 1px solid #2e9c5e;
-   color: #2e9c5e;
+@media (min-width: 991px) {
+	.button:hover {
+		background: rgba(225, 255, 238, 0.4);
+
+		/* background: transparent; */
+		outline: 1px solid #2e9c5e;
+		color: #2e9c5e;
+	}
 }
 
 .subtitle {
-   font-weight: 700;
-   font-size: 43px;
-   line-height: 1.3;
-   color: #171832;
-   text-align: center;
+	font-weight: 700;
+	font-size: 43px;
+	line-height: 1.3;
+	color: #171832;
+	text-align: center;
 }
 
 .line {
-   border: 1px solid #2e8b57;
-   width: 100%;
+	border: 1px solid #2e8b57;
+	width: 100%;
 }
 @media (max-width: 768px) {
-   .button {
-      width: 100%;
-      text-align: center;
-   }
+	.button {
+		width: 100%;
+		text-align: center;
+	}
 }
