--- a/jaguar/css/style.css
+++ b/jaguar/css/style.css
@@ -34,7 +34,6 @@ body._lock {
 			rgba(224, 235, 255, 0.7) 100%
 		),
 		rgba(52, 168, 83, 0.05);
-	/* background: #ffffff; */
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -204,14 +203,13 @@ body._lock {
 
 /* ! ====== Detalied-description =======*/
 .detalied-description {
-	padding: 85px 0 70px 0;
+	padding: 85px 0 0px 0;
 }
 .detalied-description__block {
 	margin-bottom: 155px;
 }
 .detalied-block {
 	display: flex;
-	/* align-items: center; */
 	justify-content: space-between;
 	column-gap: 30px;
 }
@@ -249,6 +247,9 @@ body._lock {
 }
 
 /* ! Benefits */
+.benefits-block {
+	padding: 100px 0 50px 0;
+}
 .benefits-block__subtitle {
 	margin-bottom: 50px;
 }
@@ -305,7 +306,6 @@ body._lock {
 }
 .benefits__text {
 	line-height: 1.5;
-	/* flex-grow: 1; */
 }
 .benefits__block {
 	margin-bottom: 80px;
@@ -313,7 +313,7 @@ body._lock {
 
 /*! Like-block ==============*/
 .like-block {
-	padding: 50px 0;
+	padding: 50px 0 0 0;
 }
 .like-block__title {
 	font-weight: 600;
@@ -377,7 +377,7 @@ body._lock {
 
 /* !Job description */
 .description-job {
-	padding: 50px 0;
+	padding: 100px 0 50px 0;
 }
 
 .description-job__subtitle {
@@ -431,9 +431,8 @@ body._lock {
 }
 .job__list {
 	font-weight: 600;
-	/* font-weight: 500; */
-	line-height: 1.3;
-	color: #818181;
+	line-height: 1.4;
+	color: #4e4e4e;
 }
 .job__list:not(:last-child) {
 	margin-bottom: 12px;
@@ -517,8 +516,6 @@ body._lock {
 	position: absolute;
 	width: 96px;
 	height: 122.62px;
-	/* width: 40px;
-	height: 52px; */
 	/* top: 0; */
 	left: 0;
 	background: url('../img/map/icons/location.svg') 0 0 no-repeat;
@@ -583,7 +580,7 @@ body._lock {
 
 /* ! Forms */
 .forms {
-	padding: 50px 0 100px 0;
+	padding: 100px 0 100px 0;
 	background-color: #ffffff;
 }
 .forms__subtitle--green {
@@ -636,6 +633,9 @@ body._lock {
 .g-recaptcha {
 	margin-bottom: 20px;
 }
+.text-danger {
+	color: rgb(243, 3, 3);
+}
 .form__button:not(:last-child) {
 	margin-bottom: 15px;
 }
@@ -643,6 +643,7 @@ body._lock {
 	font-weight: 500;
 }
 .g-form__input-wrapper_hidden {
+	cursor: none;
 	height: 0.1px;
 }
 /* ! Footer */
